--- a/tests/XPTO.TesteDeIntegracao/XPTO.TesteDeIntegracao.csproj
+++ b/tests/XPTO.TesteDeIntegracao/XPTO.TesteDeIntegracao.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.17" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.1">
       <PrivateAssets>all</PrivateAssets>
@@ -23,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Elaw\XPTO.Domain\XPTO.Domain.csproj" />
+    <ProjectReference Include="..\..\src\Elaw\XPTO.Presentation.API\XPTO.Presentation.API.csproj" />
   </ItemGroup>
 
   <ItemGroup>
